# kroger-cart

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  SKILL.md  add_items.py  pyproject.toml  smiths_cart.py
kroger_cart/: __init__.py  __main__.py  api.py  auth.py  cli.py  session.py
tests/: test_api.py  test_auth.py  test_cli.py
