[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kroger-cart"
version = "1.0.0"
description = "CLI to add grocery items to your Kroger/Smith's cart via the Kroger API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.scripts]
kroger-cart = "kroger_cart.cli:main"

[project.optional-dependencies]
keyring = ["keyring>=24.0"]
dev = ["pytest>=7.0"]
